link fix on mobile

--- a/chat/css/chat.css
+++ b/chat/css/chat.css
@@ -154,6 +154,7 @@ textarea {
 
 .collection .collection-item a {
     text-decoration: underline;
+    overflow-wrap: break-word;
 }
 
 .collection .collection-item.avatar:not(.circle-clipper)>.circle, .collection .collection-item.avatar :not(.circle-clipper)>.circle {
